提交修改的内容

--- a/Application/Home/View/Address/lst.html
+++ b/Application/Home/View/Address/lst.html
@@ -41,7 +41,7 @@
                             <option value="武汉">武汉</option>
                         </select>
 
-                        <select name="" id="city">
+                        <select name="city" id="city">
                             <option value="">请选择</option>
                             <option value="朝阳区">朝阳区</option>
                             <option value="东城区">东城区</option>
@@ -50,7 +50,7 @@
                             <option value="昌平区">昌平区</option>
                         </select>
 
-                        <select name="" id="district">
+                        <select name="district" id="district">
                             <option value="">请选择</option>
                             <option value="西二旗">西二旗</option>
                             <option value="西三旗">西三旗</option>
@@ -67,7 +67,7 @@
                     </li>
                     <li>
                         <label for="">&nbsp;</label>
-                        <input type="checkbox" name="is_default" class="check"/>设为默认地址
+                        <input type="checkbox" name="is_default" value="是" class="check"/>设为默认地址
                     </li>
                     <li>
                         <label for="">&nbsp;</label>
