提交修改的内容

--- a/Application/Home/View/Address/lst.html
+++ b/Application/Home/View/Address/lst.html
@@ -90,7 +90,7 @@
         $.post('<?php echo U("address/aJaxAdd");?>', data, function (result) {
             if (result.code == 1) {
                 var data = result.data.address;
-                $('.address_hd').append("<dl><dt>" + data.receiver + "&nbsp;" + data.province + "&nbsp;" + data.city + "&nbsp;" + data.district + "&nbsp;" + data.detail + "&nbsp;" + data.mobile + "&nbsp;" + "</dt><dd><a href=''>修改</a><a href=''>删除</a><a href=''>设为默认地址</a></dd></dl>");
+                $('.address_hd').append("<dl><dt>" + data.receiver + "&nbsp;" + data.province + "&nbsp;" + data.city + "&nbsp;" + data.district + "&nbsp;" + data.detail + "&nbsp;" + data.mobile + "&nbsp;" + "</dt><dd><a href=''>&nbsp;修改</a><a href=''>&nbsp;删除</a><a href=''>&nbsp;设为默认地址</a></dd></dl>");
             }
         });
     });
@@ -106,7 +106,7 @@
                     var number = result.addresses.length;
                     var html = "";
                     for (var i = 0; i < number; i++) {
-                        html += "<dl><dt>" + result.addresses[i].receiver + "&nbsp;" + result.addresses[i].province + "&nbsp;" + result.addresses[i].city + "&nbsp;" + result.addresses[i].district + "&nbsp;" + result.addresses[i].detail + "&nbsp;" + result.addresses[i].mobile + "&nbsp;" + "</dt><dd><a href=''>修改</a><a href=''>删除</a><a href=''>设为默认地址</a></dd></dl>";
+                        html += "<dl><dt>" + result.addresses[i].receiver + "&nbsp;" + result.addresses[i].province + "&nbsp;" + result.addresses[i].city + "&nbsp;" + result.addresses[i].district + "&nbsp;" + result.addresses[i].detail + "&nbsp;" + result.addresses[i].mobile + "&nbsp;" + "</dt><dd><a href='<?php echo U('address/update');?>?id="+result.addresses[i].id+"'>&nbsp;修改</a><a href='<?php echo U('address/delete');?>?id="+result.addresses[i].id+"'>&nbsp;删除</a><a href='<?php echo U('address/defaultAddress');?>?id="+result.addresses[i].id+"'>&nbsp;设为默认地址</a></dd></dl>";
                     }
                     $('.address_hd').append(html);
                 }
