--- a/Application/Home/View/Search/cat_search.html
+++ b/Application/Home/View/Search/cat_search.html
@@ -197,58 +197,42 @@
         <div class="filter mt10">
             <h2><a href="">重置筛选条件</a> <strong>商品筛选</strong></h2>
             <div class="filter_wrap">
+
+                <?php if(!I('get.brand_id')&&$searchFilter['brand']):?>
                 <dl>
                     <dt>品牌：</dt>
-                    <dd class="cur"><a href="">不限</a></dd>
-                    <dd><a href="">联想（ThinkPad）</a></dd>
-                    <dd><a href="">联想（Lenovo）</a></dd>
-                    <dd><a href="">宏碁（acer）</a></dd>
-                    <dd><a href="">华硕（ASUS）</a></dd>
-                    <dd><a href="">戴尔（DELL）</a></dd>
-                    <dd><a href="">索尼（SONY）</a></dd>
-                    <dd><a href="">惠普（HP）</a></dd>
-                    <dd><a href="">三星（SAMSUNG）</a></dd>
-                    <dd><a href="">优派（ViewSonic）</a></dd>
-                    <dd><a href="">苹果（Apple）</a></dd>
-                    <dd><a href="">富士通（Fujitsu）</a></dd>
+                    <?php foreach($searchFilter['brand'] as $key => $value):?>
+                    <dd><a href="__SELF__/brand_id/<?php echo $value['brand_id']?>-<?php echo $value['brand_name'];?>"><?php echo $value['brand_name'];?></a></dd>
+                    <?php endforeach;?>
                 </dl>
+                <?php endif;?>
 
+                <?php if(!I('get.price')&&$searchFilter['price']):?>
                 <dl>
                     <dt>价格：</dt>
-                    <dd class="cur"><a href="">不限</a></dd>
-                    <dd><a href="">1000-1999</a></dd>
-                    <dd><a href="">2000-2999</a></dd>
-                    <dd><a href="">3000-3499</a></dd>
-                    <dd><a href="">3500-3999</a></dd>
-                    <dd><a href="">4000-4499</a></dd>
-                    <dd><a href="">4500-4999</a></dd>
-                    <dd><a href="">5000-5999</a></dd>
-                    <dd><a href="">6000-6999</a></dd>
-                    <dd><a href="">7000-7999</a></dd>
+                    <?php foreach($searchFilter['price'] as $key => $value):?>
+                    <dd><a href="__SELF__/price/<?php echo $value;?>"><?php echo $value;?></a></dd>
+                    <?php endforeach;?>
                 </dl>
+                <?php endif;?>
 
+
+                <?php foreach ($searchFilter['gaData'] as $k => $v):
+                if($v[0]['attr_type'] == '唯一')
+                    continue;
+                // 拼出属性在URL上的名
+                $attrUrlName = 'attr_'.$v[0]['attr_id'];  // attr_xx
+                // 如果URL里面已经有这个名字说明已经点击了就跳过不显示
+                if(isset($_GET[$attrUrlName]))
+                continue
+                ?>
                 <dl>
-                    <dt>尺寸：</dt>
-                    <dd class="cur"><a href="">不限</a></dd>
-                    <dd><a href="">10.1英寸及以下</a></dd>
-                    <dd><a href="">11英寸</a></dd>
-                    <dd><a href="">12英寸</a></dd>
-                    <dd><a href="">13英寸</a></dd>
-                    <dd><a href="">14英寸</a></dd>
-                    <dd><a href="">15英寸</a></dd>
+                    <dt><?php echo $k; ?>：</dt>
+                    <?php foreach ($v as $k1 => $v1): ?>
+                    <dd><a href="__SELF__/<?php echo $attrUrlName; ?>/<?php echo $v1['attr_value']; ?>-<?php echo $k; ?>"><?php echo $v1['attr_value']; ?></a></dd>
+                    <?php endforeach; ?>
                 </dl>
-
-                <dl class="last">
-                    <dt>处理器：</dt>
-                    <dd class="cur"><a href="">不限</a></dd>
-                    <dd><a href="">intel i3</a></dd>
-                    <dd><a href="">intel i5</a></dd>
-                    <dd><a href="">intel i7</a></dd>
-                    <dd><a href="">AMD A6</a></dd>
-                    <dd><a href="">AMD A8</a></dd>
-                    <dd><a href="">AMD A10</a></dd>
-                    <dd><a href="">其它intel平台</a></dd>
-                </dl>
+                <?php endforeach; ?>
             </div>
         </div>
         <!-- 商品筛选 end -->
