--- a/Application/Home/View/Search/cat_search.html
+++ b/Application/Home/View/Search/cat_search.html
@@ -81,7 +81,7 @@
                 <ul>
                     <li>
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot1.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot1.jpg" alt=""/></a></dt>
                             <dd><a href="">美即流金丝语悦白美颜新年装4送3</a></dd>
                             <dd><strong>￥777.50</strong></dd>
                         </dl>
@@ -89,7 +89,7 @@
 
                     <li>
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot2.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot2.jpg" alt=""/></a></dt>
                             <dd><a href="">领券满399减50 金斯利安多维片</a></dd>
                             <dd><strong>￥239.00</strong></dd>
                         </dl>
@@ -97,7 +97,7 @@
 
                     <li class="last">
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot3.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot3.jpg" alt=""/></a></dt>
                             <dd><a href="">皮尔卡丹pierrecardin 男士长...</a></dd>
                             <dd><strong>￥1240.50</strong></dd>
                         </dl>
@@ -123,12 +123,12 @@
             <h2><a href="">清空</a><strong>最近浏览过的商品</strong></h2>
             <div class="leftbar_wrap">
                 <dl>
-                    <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt="" /></a></dt>
+                    <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt=""/></a></dt>
                     <dd><a href="">惠普G4-1332TX 14英寸笔记...</a></dd>
                 </dl>
 
                 <dl class="last">
-                    <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/crazy4.jpg" alt="" /></a></dt>
+                    <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/crazy4.jpg" alt=""/></a></dt>
                     <dd><a href="">直降200元！TCL正1.5匹空调</a></dd>
                 </dl>
             </div>
@@ -147,7 +147,7 @@
                 <ul>
                     <li>
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/hpG4.jpg" alt=""/></a></dt>
                             <dd class="name"><a href="">惠普G4-1332TX 14英寸笔记本电脑 （i5-2450M 2G 5</a></dd>
                             <dd class="price">特价：<strong>￥2999.00</strong></dd>
                             <dd class="buy"><span>立即抢购</span></dd>
@@ -156,7 +156,7 @@
 
                     <li>
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot3.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/list_hot3.jpg" alt=""/></a></dt>
                             <dd class="name"><a href="">ThinkPad E42014英寸笔记本电脑</a></dd>
                             <dd class="price">特价：<strong>￥4199.00</strong></dd>
                             <dd class="buy"><span>立即抢购</span></dd>
@@ -165,7 +165,7 @@
 
                     <li>
                         <dl>
-                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer4739.jpg" alt="" /></a></dt>
+                            <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/acer4739.jpg" alt=""/></a></dt>
                             <dd class="name"><a href="">宏碁AS4739-382G32Mnkk 14英寸笔记本电脑</a></dd>
                             <dd class="price">特价：<strong>￥2799.00</strong></dd>
                             <dd class="buy"><span>立即抢购</span></dd>
@@ -193,6 +193,42 @@
 
         <div style="clear:both;"></div>
 
+        <style>
+            #search_condition {
+                margin: 10px;
+                padding: 5px;
+                padding-right: 0;
+            }
+
+            #search_condition span {
+                border: 1px solid #F00;
+                padding: 5px;
+                margin: 5px;
+            }
+
+            #search_condition span a:hover {
+                background: #F00;
+                color: #FFF;
+                padding: 5px;
+                margin-right: 0;
+            }
+        </style>
+
+        <!--面包屑搜索导航内容-->
+        <div id="search_condition">
+            当前搜索条件:
+            <?php
+                //品牌
+                $brand_id = I("get.brand_id");
+                if($brandId):
+            ?>
+                <span>
+                    品牌:<?php echo ltrim(strstr($brandId,'-'),'-');?>
+                    <a href="<?php echo filterUrl('brand_id');?>">x</a>
+                </span>
+            <?php endif;?>
+        </div>
+
         <!-- 商品筛选 start -->
         <div class="filter mt10">
             <h2><a href="">重置筛选条件</a> <strong>商品筛选</strong></h2>
@@ -202,7 +238,9 @@
                 <dl>
                     <dt>品牌：</dt>
                     <?php foreach($searchFilter['brand'] as $key => $value):?>
-                    <dd><a href="__SELF__/brand_id/<?php echo $value['brand_id']?>-<?php echo $value['brand_name'];?>"><?php echo $value['brand_name'];?></a></dd>
+                    <dd>
+                        <a href="__SELF__/brand_id/<?php echo $value['brand_id']?>-<?php echo $value['brand_name'];?>"><?php echo $value['brand_name'];?></a>
+                    </dd>
                     <?php endforeach;?>
                 </dl>
                 <?php endif;?>
@@ -219,9 +257,9 @@
 
                 <?php foreach ($searchFilter['gaData'] as $k => $v):
                 if($v[0]['attr_type'] == '唯一')
-                    continue;
+                continue;
                 // 拼出属性在URL上的名
-                $attrUrlName = 'attr_'.$v[0]['attr_id'];  // attr_xx
+                $attrUrlName = 'attr_'.$v[0]['attr_id']; // attr_xx
                 // 如果URL里面已经有这个名字说明已经点击了就跳过不显示
                 if(isset($_GET[$attrUrlName]))
                 continue
@@ -229,7 +267,9 @@
                 <dl>
                     <dt><?php echo $k; ?>：</dt>
                     <?php foreach ($v as $k1 => $v1): ?>
-                    <dd><a href="__SELF__/<?php echo $attrUrlName; ?>/<?php echo $v1['attr_value']; ?>-<?php echo $k; ?>"><?php echo $v1['attr_value']; ?></a></dd>
+                    <dd>
+                        <a href="__SELF__/<?php echo $attrUrlName; ?>/<?php echo $v1['attr_value']; ?>-<?php echo $k; ?>"><?php echo $v1['attr_value']; ?></a>
+                    </dd>
                     <?php endforeach; ?>
                 </dl>
                 <?php endforeach; ?>
@@ -258,16 +298,19 @@
             <ul>
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods1.jpg" alt="" /></a></dt>
-                        <dd><a href="">清华同方精锐X2 台式电脑（双核E3500 2G 500G DVD 键鼠）带20英寸显示器</a></dt>
-                        <dd><strong>￥2399.00</strong></dt>
-                        <dd><a href=""><em>已有10人评价</em></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods1.jpg" alt=""/></a></dt>
+                        <dd><a href="">清华同方精锐X2 台式电脑（双核E3500 2G 500G DVD 键鼠）带20英寸显示器</a>
+                        </dt>
+                        <dd><strong>￥2399.00</strong>
+                        </dt>
+                        <dd><a href=""><em>已有10人评价</em></a>
+                        </dt>
                     </dl>
                 </li>
 
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods2.jpg" alt="" /></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods2.jpg" alt=""/></a></dt>
                         <dd><a href="">富士通LH531 14.1英寸笔记本电脑（i3-2350M 2G 320G 第二代核芯显卡 D刻</a></dd>
                         <dd><strong>￥2999.00</strong></dd>
                         <dd><a href=""><em>已有5人评价</em></a></dd>
@@ -276,7 +319,7 @@
 
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods3.jpg" alt="" /></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods3.jpg" alt=""/></a></dt>
                         <dd><a href="">三星Galaxy Tab P6800 7.7英寸 3G手机版 蓝牙3.0 魔丽屏 金属银</a></dd>
                         <dd><strong>￥4699.00</strong></dd>
                         <dd><a href=""><em>已有34人评价</em></a></dd>
@@ -285,7 +328,7 @@
 
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods4.jpg" alt="" /></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods4.jpg" alt=""/></a></dt>
                         <dd><a href="">宏碁AS4739-382G32Mnkk 14英寸笔记本电脑（i3-380M 2G 320G D刻 LED背</a></dd>
                         <dd><strong>￥2799.00</strong></dd>
                         <dd><a href=""><em>已有17人评价</em></a></dd>
@@ -294,7 +337,7 @@
 
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods5.jpg" alt="" /></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods5.jpg" alt=""/></a></dt>
                         <dd><a href="">ThinkPad E42014英寸笔记本电脑（i5-2450M 2G 320G 蓝牙 摄像头）</a></dd>
                         <dd><strong>￥4199.00</strong></dd>
                         <dd><a href=""><em>已有8人评价</em></a></dd>
@@ -303,7 +346,7 @@
 
                 <li>
                     <dl>
-                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods6.jpg" alt="" /></a></dt>
+                        <dt><a href=""><img src="<?php echo C('HOME_IMG_URL');?>/goods6.jpg" alt=""/></a></dt>
                         <dd><a href="">惠普G4-1332TX 14英寸笔记本电脑 （i5-2450M 2G 500G 7450M 1G独显 D刻</a></dd>
                         <dd><strong>￥2999.00</strong></dd>
                         <dd><a href=""><em>已有22人评价</em></a></dd>
@@ -337,4 +380,4 @@
 <!-- 列表主体 end-->
 
 <div style="clear:both;"></div>
-<include file="Layout/help" />
+<include file="Layout/help"/>
