--- a/Application/Home/View/Index/goods.html
+++ b/Application/Home/View/Index/goods.html
@@ -190,7 +190,7 @@
                     <!-- 此处的星级切换css即可 默认为5星 star4 表示4星 star3 表示3星 star2表示2星 star1表示1星 -->
                 </ul>
                 <form action="<?php echo U('cart/add');?>" method="post" class="choose">
-                    <input type="hidden" name="goods_id" value="<?php echo $info['id']; ?>" />
+                    <input type="hidden" name="goods_id" value="<?php echo $info['id']; ?>"/>
                     <ul>
                         <?php $index = 0; foreach($keXuanData as $key => $value):?>
 
@@ -201,7 +201,8 @@
                                     <?php $index1 = 0; foreach($value as $key1 => $value1):?>
                                     <?php if($index1 == 0):?>
                                     <a class="selected" href="javascript:;"><?php echo $value1['attr_value'];?> <input
-                                            type="radio" name="goods_attr_id[<?php echo $index;?>]" value="<?php echo $value1['id'];?>"
+                                            type="radio" name="goods_attr_id[<?php echo $index;?>]"
+                                            value="<?php echo $value1['id'];?>"
                                             checked="checked"/></a>
                                     <?php else:?>
                                     <a href="javascript:;"><?php echo $value1['attr_value'];?> <input type="radio"
@@ -446,20 +447,26 @@
                     <!-- 分页信息 end -->
                     <!--  评论表单 start-->
                     <div class="comment_form mt20">
-                        <form action="">
+                        <form action="" id="comment_form">
+                            <input type="hidden" name="goods_id" value="<?php echo $info['id'];?>"/>
                             <ul>
                                 <li>
                                     <label for=""> 评分：</label>
-                                    <input type="radio" name="grade"/> <strong class="star star5"></strong>
-                                    <input type="radio" name="grade"/> <strong class="star star4"></strong>
-                                    <input type="radio" name="grade"/> <strong class="star star3"></strong>
-                                    <input type="radio" name="grade"/> <strong class="star star2"></strong>
-                                    <input type="radio" name="grade"/> <strong class="star star1"></strong>
+                                    <input type="radio" name="star" value="5" checked="checked"/> <strong
+                                        class="star star5"></strong>
+                                    <input type="radio" name="star" value="4"/> <strong class="star star4"></strong>
+                                    <input type="radio" name="star" value="3"/> <strong class="star star3"></strong>
+                                    <input type="radio" name="star" value="2"/> <strong class="star star2"></strong>
+                                    <input type="radio" name="star" value="1"/> <strong class="star star1"></strong>
                                 </li>
 
                                 <li>
                                     <label for="">评价内容：</label>
-                                    <textarea name="" id="" cols="" rows=""></textarea>
+                                    <textarea name="content" id="" cols="" rows=""></textarea>
+                                </li>
+                                <li id="myjx">
+                                    <label for="">买家印象:</label>
+                                    <input type="text" name="yx_name" size="60"/>多个印象用","号隔开
                                 </li>
                                 <li>
                                     <label for="">&nbsp;</label>
@@ -505,6 +512,11 @@
 <!-- 商品页面主体 end -->
 <div style="clear:both;"></div>
 
+
+
+<!-- 导入jquui中的dialogr插件 -->
+<link href="__PUBLIC__/jquery-ui-1.9.2.custom/css/blitzer/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+<script src="__PUBLIC__/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.js"></script>
 <script>
     $.ajax({
         type: "GET",
@@ -538,5 +550,120 @@
                 $('#member_price').html("¥ " + data + ' 元');
             });
         }
+    });
+
+    /******** AJAX发表评论 *************/
+    $('#comment_form').submit(function (e) {
+        e.preventDefault();
+    })
+    $('.comment_btn').click(function () {
+        // 先接收表单中的数据，并拼成这样式格式的字符串： name=tom&age=231
+        form = $('#comment_form');
+        submitData = form.serialize();
+        $.ajax({
+            type: 'POST',
+            url: "<?php echo U('Comment/ajaxAdd');?>",
+            data: submitData,
+            dataType: 'json',
+            success: function (result) {
+                if (result.code == -1) {
+                    alert(result.message);
+                } else if (result.code == -2) {
+                    // 未登录就显示弹出窗口
+                    $("#login_dialog").dialog("open");
+                } else {
+                    // 清空表单
+                    form.trigger("reset"); // 触发表单的reset事件
+                    // 用新发表的评论数据拼出一个显示的HTML字符串
+                    var html = '<div class="comment_items mt10 none"><div class="user_pic"><dl><dt><a href=""><img src="' + data.info.face + '" alt="" /></a></dt><dd><a href="">' + data.info.username + '</a></dd></dl></div><div class="item"><div class="title"><span>' + data.info.addtime + '</span><strong class="star star' + data.info.star + '"></strong></div><div class="comment_content">' + data.info.content + '</div><div class="btns"><a href="javascript:void(0);" onclick="do_reply(this,' + data.info.id + ');" class="reply">回复(0)</a><a href="" class="useful">有用(0)</a></div><div class="reply_form"></div><ul class="reply_container"></ul></div><div class="cornor"></div></div>';
+                    // 把整个评论的字符串转化成jq的对象
+                    html = $(html);
+                    // 把拼好的评论放到页面中
+                    $("#comment_container").prepend(html);
+                    // 让导航条直接滚动第一个评论处
+                    $("body").animate({
+                        "scrollTop": "750px"
+                    }, 1000, function () {
+                        html.fadeIn(2000);
+                    });
+                }
+            }
+        });
+    });
+    /******************** 回复 ********************/
+    var is_login = 0;  // 是否登录
+
+    function do_reply(btn, commentId) {
+        // 先选中按钮所在的div
+        var div = $(btn).parent().next("div");
+        /************* 在回复按钮的下面构造一个回复的表单 *********************/
+        var replyForm = '<br /><hr style="clear:both;margin-top:15px;" /><form><input type="hidden" name="comment_id" value="' + commentId + '" /><textarea name="content" style="width:100%;" rows="6"></textarea><br /><br /><input type="button" onclick="post_reply(this);" value="回复" /> <input onclick="close_reply(this);" type="button" value="取消" /></form>';
+        //放到按钮的后面
+        div.html(replyForm);
+        //判断有没有登录
+        if (is_login <= '0') {
+            $('#login_dialog').dialog('open');
+        }
+    }
+</script>
+
+<div id="login_dialog" class="none" title="登录表单">
+    <form id="login_form">
+        <ul>
+            <li>
+                <label for="">用户名：</label>
+                <input type="text" class="txt" name="username" />
+            </li>
+            <li>
+                <label for="">密　码：</label>
+                <input type="password" class="txt" name="password" />
+            </li>
+            <li class="checkcode">
+                <label for="">验证码：</label>
+                <input type="text"  name="chkcode" /><br />
+                <img style="cursor:pointer;" onclick="this.src='<?php echo U('Member/chkcode'); ?>#'+Math.random();" src="<?php echo U('Member/chkcode'); ?>" />
+            </li>
+        </ul>
+    </form>
+</div>
+<script>
+    // 配置对话框
+    $( "#login_dialog" ).dialog({
+        resizable : false,
+        position : {at: "center"},
+        modal : true,
+        autoOpen: false,
+        width: 400,
+        buttons: [
+            {
+                text: "登录",
+                click: function() {
+                    // ajax提交表单
+                    $.ajax({
+                        type : "POST",
+                        url : "<?php echo U('Member/login'); ?>",
+                        data : $("#login_form").serialize(),
+                        dataType : "json",
+                        success : function(data)
+                        {
+                            if(data.status == 1)
+                            {
+                                is_login = 1;
+                                $( "#login_dialog" ).dialog( "close" );
+                                window.location.reload();
+                            }
+                            else
+                                alert(data.info);
+                        }
+                    });
+                }
+            },
+            {
+                text: "取消",
+                click: function() {
+                    $( this ).dialog( "close" );
+                }
+            }
+        ]
     });
 </script>
