解决Linux大小写找不到文件的问题

--- a/Application/Home/View/Member/register.html
+++ b/Application/Home/View/Member/register.html
@@ -1,4 +1,4 @@
-<Layout name="layout/layout"/>
+<Layout name="Layout/layout"/>
 <link rel="stylesheet" href="<?php echo C('HOME_CSS_URL');?>/login.css" type="text/css">
 
 
